src/objects/PQN_Pallet_Loss_Tree__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Explanations__c</fullName>
        <label>Explanations</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loss_Code__c</fullName>
        <label>Loss Code</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Loss_L1__c</fullName>
        <label>Loss L1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loss_L2__c</fullName>
        <label>Loss L2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loss_L3__c</fullName>
        <label>Loss L3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>PQN Pallet Loss Tree</label>
    <listViews>
        <fullName>Loss_tree</fullName>
        <columns>Loss_Code__c</columns>
        <columns>Loss_L1__c</columns>
        <columns>Loss_L2__c</columns>
		<columns>Loss_L3__c</columns>
		<columns>Loss_L4__c</columns>
		<columns>Explanations__c</columns>
        <filterScope>Everything</filterScope>
        <label>Loss tree</label>
        <language>en_US</language>
    </listViews>
</CustomObject>